add get_new_encoder_df (calculate linear velocity)

--- a/code/data/exploreData.ipynb
+++ b/code/data/exploreData.ipynb
@@ -19,42 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "exploreData.ipynb  param\tsensor_data.zip    vehicle_cofig.png\r\n",
-      "image_left.png\t   param.zip\tstereo_images\t   vehicle_coord1.png\r\n",
-      "image_right.png    sensor_data\tstereo_images.zip\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "! ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +46,7 @@
        "'\\nFOV: 190 (degree)\\nStart angle: -5 (degree)\\nEnd angle: 185 (degree)\\nAngular resolution: 0.666 (degree) # shoot a laser ray every 0.666 degree\\nMax range: 80 (meter)\\n\\n* LiDAR rays with value 0.0 represent infinite range observations.\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +88,7 @@
        "'\\nlidar_data = lidar_data.drop([\"timestamp\"], axis = 1)\\nlidar_data.head()\\nlidar_data.plot.hist(bins=10)\\nplt.show()\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +235,7 @@
        "9  1544582648841781008       70445        70565"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +336,7 @@
        "4  1544582648791768265       69961        70081"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,31 +349,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9897613,       96,       96],\n",
+       "       [ 9998718,       96,       96],\n",
+       "       [10016259,       96,       95],\n",
+       "       ...,\n",
+       "       [10004866,      142,      143],\n",
+       "       [ 9997784,      142,      143],\n",
+       "       [10000575,      143,      142]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dt= []\n",
-    "dlz= []\n",
-    "drz=[]\n",
-    "for i in range(1,df.shape[0]):\n",
-    "    dt.append(df[\"timestamp\"][i] - df[\"timestamp\"][i-1])\n",
-    "    dlz.append(df[\"left_count\"][i] - df[\"left_count\"][i-1])\n",
-    "    drz.append(df[\"right_count\"][i] - df[\"right_count\"][i-1])"
+    "df = np.diff(df, axis=0)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt= np.array(dt)*1e-9\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -482,31 +449,31 @@
        "4  0.010033   96   97"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new = {'dt': dt, 'dlz': dlz, 'drz': drz}\n",
+    "new = {'dt': df[:,0]*1e-9, 'dlz': df[:,1], 'drz': df[:,2]}\n",
     "new_df = pd.DataFrame(data=new)\n",
     "new_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "res = 4096\n",
     "dL = 0.623479\n",
-    "dR = 0.622806\n"
+    "dR = 0.622806"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +505,6 @@
        "      <th>velocity_left</th>\n",
        "      <th>velocity_right</th>\n",
        "      <th>linear_velocity(m/s)</th>\n",
-       "      <th>linear_velocity(mph)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -552,7 +518,6 @@
        "      <td>4.638233</td>\n",
        "      <td>4.633226</td>\n",
        "      <td>4.635729</td>\n",
-       "      <td>10.370126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -564,7 +529,6 @@
        "      <td>4.591332</td>\n",
        "      <td>4.586376</td>\n",
        "      <td>4.588854</td>\n",
-       "      <td>10.265266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -576,7 +540,6 @@
        "      <td>4.583291</td>\n",
        "      <td>4.530653</td>\n",
        "      <td>4.556972</td>\n",
-       "      <td>10.193946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -588,7 +551,6 @@
        "      <td>4.589262</td>\n",
        "      <td>4.536555</td>\n",
        "      <td>4.562908</td>\n",
-       "      <td>10.207226</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -600,7 +562,6 @@
        "      <td>4.575703</td>\n",
        "      <td>4.618376</td>\n",
        "      <td>4.597039</td>\n",
-       "      <td>10.283577</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -614,15 +575,15 @@
        "3  0.010003   96   95       0.045907        0.045380       4.589262   \n",
        "4  0.010033   96   97       0.045907        0.046336       4.575703   \n",
        "\n",
-       "   velocity_right  linear_velocity(m/s)  linear_velocity(mph)  \n",
-       "0        4.633226              4.635729             10.370126  \n",
-       "1        4.586376              4.588854             10.265266  \n",
-       "2        4.530653              4.556972             10.193946  \n",
-       "3        4.536555              4.562908             10.207226  \n",
-       "4        4.618376              4.597039             10.283577  "
+       "   velocity_right  linear_velocity(m/s)  \n",
+       "0        4.633226              4.635729  \n",
+       "1        4.586376              4.588854  \n",
+       "2        4.530653              4.556972  \n",
+       "3        4.536555              4.562908  \n",
+       "4        4.618376              4.597039  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,13 +594,13 @@
     "new_df['velocity_left'] = new_df[\"distance_left\"] /  new_df[\"dt\"]\n",
     "new_df['velocity_right'] = new_df[\"distance_right\"] /  new_df[\"dt\"]\n",
     "new_df['linear_velocity(m/s)'] = (new_df['velocity_left'] + new_df['velocity_right'])/2.0 \n",
-    "new_df['linear_velocity(mph)'] = new_df['linear_velocity(m/s)']*2.237\n",
+    "# new_df['linear_velocity(mph)'] = new_df['linear_velocity(m/s)']*2.237\n",
     "new_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -671,13 +632,11 @@
        "      <th>velocity_left</th>\n",
        "      <th>velocity_right</th>\n",
        "      <th>linear_velocity(m/s)</th>\n",
-       "      <th>linear_velocity(mph)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>116047.000000</td>\n",
        "      <td>116047.000000</td>\n",
        "      <td>116047.000000</td>\n",
        "      <td>116047.000000</td>\n",
@@ -697,7 +656,6 @@
        "      <td>4.539410</td>\n",
        "      <td>4.530837</td>\n",
        "      <td>4.535123</td>\n",
-       "      <td>10.145070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -709,7 +667,6 @@
        "      <td>4.879223</td>\n",
        "      <td>4.877265</td>\n",
        "      <td>4.878008</td>\n",
-       "      <td>10.912104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -721,12 +678,10 @@
        "      <td>-0.100529</td>\n",
        "      <td>-0.096457</td>\n",
        "      <td>-0.095616</td>\n",
-       "      <td>-0.213894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>0.009988</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -745,7 +700,6 @@
        "      <td>2.676730</td>\n",
        "      <td>2.673866</td>\n",
        "      <td>2.674156</td>\n",
-       "      <td>5.982088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -757,7 +711,6 @@
        "      <td>8.812324</td>\n",
        "      <td>8.811276</td>\n",
        "      <td>8.814739</td>\n",
-       "      <td>19.718571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -769,7 +722,6 @@
        "      <td>15.175901</td>\n",
        "      <td>26.624950</td>\n",
        "      <td>20.514244</td>\n",
-       "      <td>45.890363</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -786,28 +738,18 @@
        "75%         0.010012     184.000000     184.000000       0.087989   \n",
        "max         0.010616     309.000000     557.000000       0.147765   \n",
        "\n",
-       "       distance_right  velocity_left  velocity_right  linear_velocity(m/s)  \\\n",
-       "count   116047.000000  116047.000000   116047.000000         116047.000000   \n",
-       "mean         0.045306       4.539410        4.530837              4.535123   \n",
-       "std          0.048767       4.879223        4.877265              4.878008   \n",
-       "min         -0.000955      -0.100529       -0.096457             -0.095616   \n",
-       "25%          0.000000       0.000000        0.000000              0.000000   \n",
-       "50%          0.026750       2.676730        2.673866              2.674156   \n",
-       "75%          0.087894       8.812324        8.811276              8.814739   \n",
-       "max          0.266071      15.175901       26.624950             20.514244   \n",
-       "\n",
-       "       linear_velocity(mph)  \n",
-       "count         116047.000000  \n",
-       "mean              10.145070  \n",
-       "std               10.912104  \n",
-       "min               -0.213894  \n",
-       "25%                0.000000  \n",
-       "50%                5.982088  \n",
-       "75%               19.718571  \n",
-       "max               45.890363  "
+       "       distance_right  velocity_left  velocity_right  linear_velocity(m/s)  \n",
+       "count   116047.000000  116047.000000   116047.000000         116047.000000  \n",
+       "mean         0.045306       4.539410        4.530837              4.535123  \n",
+       "std          0.048767       4.879223        4.877265              4.878008  \n",
+       "min         -0.000955      -0.100529       -0.096457             -0.095616  \n",
+       "25%          0.000000       0.000000        0.000000              0.000000  \n",
+       "50%          0.026750       2.676730        2.673866              2.674156  \n",
+       "75%          0.087894       8.812324        8.811276              8.814739  \n",
+       "max          0.266071      15.175901       26.624950             20.514244  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +769,7 @@
        "(5267.538156830349, 5257.589840347711)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +922,7 @@
        "9  1544582648752131818   -0.000015     0.000006  -0.000009"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
