--- a/code/data/exploreData.ipynb
+++ b/code/data/exploreData.ipynb
@@ -5045,7 +5045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -7161,13 +7161,107 @@
        "4  10.1300001144  9.9930000305  9.8480005264  9.7190008163  9.5910005569  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merge_all_inner.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vt = merge_all_inner[\"linear_velocity(m/s)\"].values\n",
+    "wt = merge_all_inner[\"wt\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.63572923, 4.63572923, 4.58885368, ..., 6.82890016, 6.81024558,\n",
+       "       6.8593898 ])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.00917383, -0.00915493, -0.00785581, ..., -0.00388325,\n",
+       "        0.00430516,  0.00210604])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(23.80025342)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma_vt = np.cov(vt)\n",
+    "sigma_vt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(0.00232731)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma_wt = np.cov(wt)\n",
+    "sigma_wt  "
    ]
   },
   {
@@ -7179,7 +7273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7188,7 +7282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7197,12 +7291,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge_all_left.to_csv(\"sync_merge_all_left.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stereo CAM\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of image form left CAM: 1161\n"
+     ]
+    }
+   ],
+   "source": [
+    "left_image_path = \"./stereo_images/stereo_left/\"\n",
+    "right_image_path = \"./stereo_images/stereo_right/\"\n",
+    "left_img_fname = [f for f in os.listdir(left_image_path)]\n",
+    "left_img_timestamp = [os.path.splitext(f)[0] for f in os.listdir(left_image_path)]\n",
+    "right_img_fname = [f for f in os.listdir(right_image_path)]\n",
+    "right_img_timestamp = [os.path.splitext(f)[0] for f in os.listdir(right_image_path)]\n",
+    "print(f\"Num of image form left CAM: {len(left_img_timestamp)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>905</th>\n",
+       "      <td>1544582648735466220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1075</th>\n",
+       "      <td>1544582649735595352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>723</th>\n",
+       "      <td>1544582650735684594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>449</th>\n",
+       "      <td>1544582651735293836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>1544582652735675312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>1544582653735761281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>857</th>\n",
+       "      <td>1544582654735700274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>576</th>\n",
+       "      <td>1544582655735790039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>1544582656735727319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>1544582657735567869</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                timestamp\n",
+       "905   1544582648735466220\n",
+       "1075  1544582649735595352\n",
+       "723   1544582650735684594\n",
+       "449   1544582651735293836\n",
+       "285   1544582652735675312\n",
+       "339   1544582653735761281\n",
+       "857   1544582654735700274\n",
+       "576   1544582655735790039\n",
+       "42    1544582656735727319\n",
+       "742   1544582657735567869"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam_df = pd.DataFrame(left_img_timestamp, columns=['timestamp'],dtype='int64').sort_values(by=['timestamp'])\n",
+    "cam_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1161 entries, 0 to 1160\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column     Non-Null Count  Dtype\n",
+      "---  ------     --------------  -----\n",
+      " 0   timestamp  1161 non-null   int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 9.2 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cam_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1544583062740325244, 1544582980741886004, 1544582692736039888, ...,\n",
+       "       1544582808737366303, 1544583442744246662, 1544583229741856148])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam_df['timestamp'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dsadsa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-c11135e7c37b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdsadsa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dsadsa' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dsadsa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam_df['timestamp']=cam_df['timestamp'].astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam_df['timestamp']= np.round(cam_df['timestamp']*1e-6).astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
